# nginx-sqlize

./: .gitignore  README.md  pyproject.toml
nginx_sqlize/: __init__.py  core.py  database.py  main.py  parser.py  queries.py  report.py
tests/: test_database.py  test_integration.py  test_parser.py
