[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nginx-sqlize"
version = "0.1.0"
description = "A lightweight, high-performance tool for importing Nginx logs into SQLite for flexible querying and analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "fidacura", email = "your-email@example.com"}
]
dependencies = [
    "click>=8.0.0",  # For command line interface
    "tqdm>=4.62.0",  # For progress bars
    "python-dateutil>=2.8.2",  # For date parsing
]

[project.scripts]
nginx-sqlize = "nginx_sqlize.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88