[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nginx-sqlize"
version = "0.2.1"
description = "A tool for importing Nginx logs into SQLite for easy querying."
license = "GPL-2.0-only"
requires-python = ">=3.9"
authors = [
    {name = "fidacura", email = "hey@fidacura.net"}
]
keywords = ["nginx", "logs", "sqlite", "analytics", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer[all]>=0.9.0",       # modern cli with rich integration
    "rich>=13.0.0",            # beautiful terminal output
    "polars>=0.20.0",          # high-performance dataframes  
    "pydantic>=2.0.0",         # data validation and settings
    "loguru>=0.7.0",           # modern logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",             # fast linter (replaces isort + flake8)
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
nginx-sqlize = "nginx_sqlize.main:main"

[project.urls]
Homepage = "https://github.com/fidacura/nginx-sqlize"
Documentation = "https://github.com/fidacura/nginx-sqlize#readme"
Repository = "https://github.com/fidacura/nginx-sqlize.git"
Issues = "https://github.com/fidacura/nginx-sqlize/issues"

# modern tool configuration
[tool.hatch.version]
path = "nginx_sqlize/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/nginx_sqlize",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["nginx_sqlize"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]